@@ -27,11 +27,10 @@ function [eta_zero, eta_inf, lambda, m, n, R_square, eta_apparent_fit] = carreau
 
     % set parameters for the options structure sent to lsqcurvefit.
 	options = optimset('MaxFunEvals', 100000, ...
-                       'Diagnostics', 'on', ...
+                       'Diagnostics', 'off', ...
                        'TolFun', 1e-17, ...
                        'MaxIter', 500000, ...
-                       'TolX', 1e-10, ...
-                       'ShowStatusWindow', 'on');
+                       'TolX', 1e-12);
 
 	% initial guess
     m        = 0.68;
